# openbigrigs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3rd/: CMakeLists.txt
assets/: CMakeLists.txt
docs/: MUSIC.md  README.md
src/: CMakeLists.txt  audio.cpp  audio.h  file.cpp  file.h  fs.cpp  fs.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  rgb_plus_a_surface.cpp  rgb_plus_a_surface.h  window.cpp  window.h
src/resources/: base_resource_manager.h  file.cpp  file.h  resource.cpp  resource.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  surface.cpp  surface.h
